@@ -1,5 +1,5 @@
 Package: BiocCheck
-Version: 1.25.1
+Version: 1.25.0
 Title: Bioconductor-specific package checks
 Description: Executes Bioconductor-specific package checks.
 Authors@R: c(
