@@ -565,33 +565,21 @@ if (!requireNamespace("styler", quietly = TRUE)) {
 }
 ## Automatically re-format the R code in your package
 styler::style_pkg(transformers = styler::tidyverse_style(indent_by = 4))
-
-## If using biocthis:
-styler::style_pkg(transformers = biocthis::bioc_style())
-
-## For your Rmd vignette files:
-styler::style_dir(
-    "vignettes",
-    transformers = biocthis::bioc_style(),
-    filetype = "Rmd"
-)
 ```
 
-You can also use [`biocthis::bioc_style()`][biocstyle] which adapts the
-`tidverse_style()` to make it more Bioconductor-friendly. If you are
+If you are
 working with [RStudio Desktop][RStudio] use also the "Reformat code"
 button which will help you break long lines of code. Alternatively,
-use [formatR][formatR], though beware that it can break valid code
-involving both type of quotation marks (`"` and `'`) and does not
+use [formatR][formatR], though beware that it can break valid R code
+involving both types of quotation marks (`"` and `'`) and does not
 support re-formatting `roxygen2` examples. In general,
 it is best to version control your code before applying any
 automatic re-formatting solutions and implement unit tests to
 verify that your code runs as intended after you re-format your code.
 
-[formatR]: https://cran.r-project.org/web/packages/formatR/index.html
-[styler]: https://styler.r-lib.org/
+[formatR]: https://cran.r-project.org/package=formatR
+[styler]: https://cran.r-project.org/package=styler
 [RStudio]: https://rstudio.com/products/rstudio/download/
-[biocstyle]: https://lcolladotor.github.io/biocthis/reference/bioc_style.html
 
 ## Duplication checks
 
